--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ pre {
 }
 
 p {
-  font-size: 1em;  
+  font-size: 1.2em;  
 }
 
 h6 {
@@ -58,7 +58,7 @@ h6 {
 }
 
 .qInfoDiv {
-  font-size: 20px;  
+  font-size: 1.2em;  
   font-weight: bold;
 }
 
@@ -141,7 +141,11 @@ code {
     font-size: 1.2em;
   }
 
-  h6 {
+  h6, p {
     font-size: 0.8em;
+  }
+
+  .qInfoDiv {
+    font-size: 0.8em; 
   }
 }
