--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body {
   /* background-color: #1F0336; */
-  background-color: teal;
+  background-color: black;
 }
 
 
@@ -20,8 +20,8 @@ h2 {
   font-weight: bold;
 }
 
-span {
-  background-color: white;
+p {
+  color: black;
 }
 
 img {
@@ -162,6 +162,10 @@ code {
 
 #q-Num {
   text-align: right;
+}
+
+#title, #phone-message {
+  color: white
 }
 
 @media(max-width: 768px) {
