--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,12 @@ h6 {
   color: white;
 }
 
+.boot-image {
+  width: 42vh;
+  max-width: 42vh;
+  text-align: center;
+}
+
 .hidden {
   display: none;
 }
