--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ h6 {
   width: 42vh;
   max-width: 42vh;
   text-align: center;
+  display: block
 }
 
 .hidden {
@@ -125,6 +126,10 @@ h6 {
 
 #LLandML {
   height: 100%
+}
+
+#regis {
+  margin-top: 3vh
 }
 
 code {
